k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.8.3
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: controller
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - cub kafka-ready -b localhost:9092 1 20
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - cub kafka-ready -b localhost:9092 1 20
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 6
