k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      # TODO: Change the targetPort to 5433 to match the container port in the postgres deployment
      targetPort: 5433
