k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  type: ClusterIP
  selector:
    app: worker-service
  ports:
    - name: tcp
      port: 80
      targetPort: 8080
